# MicrophoneLoopback

./: CMakeLists.txt  LICENCE  MicrophoneLoopback.conf  README.md
include/: CMDParser.h  Common.h  LoopbackStream.h  StreamApplication.h
src/: CMDParser.cpp  Common.cpp  LoopbackStream.cpp  StreamApplication.cpp  main.cpp
